--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
-    "rimraf": "^6.0.0",
-    "rolldown": "^1.0.0-beta.42",
-    "rolldown-plugin-dts": "^0.16.11",
+    "tsup": "^8.5.0",
     "typescript": "^5.9.3"
   }
 }
