--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -2,22 +2,27 @@
   "name": "@bf6mods/sdk",
   "version": "1.0.1",
   "description": "TypeScript definitions for the BF6 modding API",
+  "type": "module",
   "license": "MIT",
   "exports": {
     ".": {
-      "types": "./mod/index.d.ts",
-      "import": "./dist/modlib/index.js",
-      "require": "./dist/modlib/index.cjs"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     }
   },
   "files": [
-    "dist/",
-    "src/mod/"
+    "dist/"
   ],
   "scripts": {
-    "build": "rolldown -c"
+    "build": "tsup"
   },
-  "keywords": ["bf6", "mods", "typescript", "definitions", "api"],
+  "keywords": [
+    "bf6",
+    "mods",
+    "typescript",
+    "definitions",
+    "api"
+  ],
   "publishConfig": {
     "access": "public"
   }
