--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,14 +1,13 @@
 {
-  "include": ["src/**/*"],
   "compilerOptions": {
     "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "strict": true,
-    "declarationMap": true,
-    "declaration": true,   
+    "outDir": "dist",
     "paths": {
-        "modlib": ["./src/modlib"]
+      "modlib": ["./src/modlib"]
     },
+    "types": ["./src/mod/index.d.ts", "@types/node"]
   }
 }
