--- a/packages/cli/resources/prepare/tsconfig.json
+++ b/packages/cli/resources/prepare/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "strict": true,
-    "outDir": "dist",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "types": [
       "@bf6mods/sdk"
     ],
