--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "strict": true,
-    "outDir": "dist",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "types": ["@types/node"]
-  }
+  },
+  "include": ["./src/**/*"]
 }
