--- a/packages/cli/resources/prepare/tsconfig.json
+++ b/packages/cli/resources/prepare/tsconfig.json
@@ -1,16 +1,14 @@
 {
-  "compilerOptions": {
-    "baseUrl": "..",
-    "paths": { "#imports": ["./.bf6/imports"] },
-    "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
-    "strict": true,
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "types": [
-      "@bf6mods/sdk"
-    ],
-  },
-  "include": ["../**/*", "./bf6.d.ts"]
+	"compilerOptions": {
+		"baseUrl": "..",
+		"paths": { "#imports": ["./.bf6/imports"] },
+		"target": "ES2020",
+		"module": "NodeNext",
+		"moduleResolution": "nodenext",
+		"strict": true,
+		"allowImportingTsExtensions": true,
+		"noEmit": true,
+		"types": ["@bf6mods/sdk"]
+	},
+	"include": ["../**/*", "./bf6.d.ts"]
 }
