--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,10 @@
 	"files": [
 		"dist/"
 	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bf6mods/bf6mods.git"
+	},
 	"dependencies": {
 		"@bf6mods/sdk": "1.0.2",
 		"@clack/prompts": "^0.11.0",
