--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -10,6 +10,10 @@
 			"import": "./dist/index.js"
 		}
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bf6mods/bf6mods.git"
+	},
 	"files": [
 		"dist/"
 	],
