--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@bf6mods/cli",
-	"version": "1.1.1",
+	"version": "1.1.2",
 	"description": "CLI and library for bundling BF6 mods",
 	"license": "MIT",
 	"type": "module",
@@ -27,7 +27,7 @@
 		"url": "git+https://github.com/bf6mods/bf6mods.git"
 	},
 	"dependencies": {
-		"@bf6mods/sdk": "1.0.3",
+		"@bf6mods/sdk": "*",
 		"@clack/prompts": "^0.11.0",
 		"chokidar": "^4.0.3",
 		"colors": "^1.4.0",
