--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.5",
 		"@types/node": "^24.7.1",
-		"tsup": "^8.5.0",
+		"tsdown": "^0.15.9",
 		"typescript": "^5.9.3"
 	}
 }
