--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,7 +10,7 @@
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "tsup",
+		"build": "tsdown",
 		"start": "cross-env EXIT_CODE=none tsx ./src/cli/index.ts"
 	},
 	"exports": {
@@ -34,8 +34,9 @@
 		"commander": "^14.0.1",
 		"jiti": "^2.6.1",
 		"knitwork": "^1.2.0",
-		"rolldown": "^1.0.0-beta.43",
-		"stringify-object": "^6.0.0"
+		"rolldown": "^1.0.0-beta.44",
+		"stringify-object": "^6.0.0",
+		"strip-ansi": "^7.1.2"
 	},
 	"publishConfig": {
 		"access": "public"
