--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	],
 	"scripts": {
 		"build": "npm run build -ws",
-		"test": "npm run test -ws --if-present",
+		"test": "vitest",
 		"lint": "biome check",
 		"lint:fix": "biome check --write"
 	},
