--- a/packages/cli/src/resources/templates/All/package.json
+++ b/packages/cli/src/resources/templates/All/package.json
@@ -7,8 +7,5 @@
     "postinstall": "bf6mods prepare"
   },
   "type": "module",
-  "devDependencies": {
-    "@bf6mods/cli": "^1.2.1",
-    "@bf6mods/sdk": "^1.1.1"
-  }
+  "devDependencies": {}
 }
