--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@biomejs/biome": "2.2.5",
 		"@types/node": "^24.7.1",
 		"tsdown": "^0.15.9",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"vitest": "^4.0.2"
 	}
 }
