--- a/packages/cli/src/resources/templates/All/package.json
+++ b/packages/cli/src/resources/templates/All/package.json
@@ -1,11 +1,15 @@
 {
   "name": "{name}",
+  "version": "1.0.0",
   "scripts": {
     "build": "bf6mods build",
     "dev": "bf6mods dev",
     "log": "bf6mods log",
-    "postinstall": "bf6mods prepare"
+    "postinstall": "bf6mods prepare",
+    "typecheck": "tsc --noEmit"
   },
   "type": "module",
-  "devDependencies": {}
+  "devDependencies": {
+    "typescript": "^5.9.3"
+  }
 }
