--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -40,6 +40,7 @@
 		"@bufbuild/protobuf": "^2.10.0",
 		"@connectrpc/connect": "^2.1.0",
 		"@connectrpc/connect-node": "^2.1.0",
+		"@connectrpc/connect-web": "^2.1.0",
 		"@connectrpc/validate": "^0.2.0"
 	}
 }
