--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -20,7 +20,8 @@
 	"scripts": {
 		"build": "tsdown",
 		"generate": "buf generate",
-		"start": "tsx src/index.ts"
+		"start": "tsx src/index.ts",
+		"dev": "tsx src/node-index.ts"
 	},
 	"keywords": [
 		"bf6",
