--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,7 @@
 		"chokidar": "^4.0.3",
 		"colors": "^1.4.0",
 		"commander": "^14.0.1",
+		"import-global": "^1.1.1",
 		"jiti": "^2.6.1",
 		"keytar": "^7.9.0",
 		"knitwork": "^1.2.0",
@@ -48,7 +49,7 @@
 		"@types/stringify-object": "^4.0.5",
 		"cross-env": "^10.1.0",
 		"execa": "^9.6.0",
-		"puppeteer": "^24.26.1",
+		"puppeteer": "^24.27.0",
 		"tsx": "^4.20.6"
 	}
 }
